implementacion de Dtos y merge con Master